# crossroads

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  storage.rs
src/interfaces/: filesystem.rs  mod.rs  trash.rs
src/providers/: mod.rs  native_fs.rs  one_drive.rs  s3.rs
src/providers/google_drive/: auth.rs  mod.rs  token.rs
src/providers/google_drive/interfaces/: filesystem.rs  mod.rs  trash.rs
src/providers/onedrive/: auth.rs  mod.rs  token.rs
src/providers/onedrive/interfaces/: filesystem.rs  trash.rs
